--- a/index.html
+++ b/index.html
@@ -5,195 +5,259 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simply Chocolate</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <!-- header -->
-    <header>
-      <nav>
-        <a href="./index.html"
-          >SIMPLY CHOCOLATE
-          <img src="./images/logo.svg" alt="logo" width="24" height="24"
-        /></a>
-        <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">How it’s made?</a></li>
-          <li><a href="">Chocolate is loved</a></li>
+    <header class="page-header">
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="header-logo" href=""
+            >SIMPLY<span class="logo-part"> CHOCOLATE</span
+            ><svg class="logo-icon" width="24" height="24">
+              <use href="./images/icons.svg#icon-logo"></use>
+            </svg>
+          </a>
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="">Home</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="">How it’s made?</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="">Chocolate is loved</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="header-soc-list">
+          <li class="header-soc-item">
+            <a
+              href="http://instagram.com/"
+              class="header-soc-link"
+              target="_blank"
+              rel="noreferrer noopener"
+              ><svg class="header-soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="header-soc-item">
+            <a
+              href="http://twitter.com/"
+              class="header-soc-link"
+              target="_blank"
+              rel="noreferrer noopener"
+              ><svg class="header-soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
         </ul>
-      </nav>
-      <a href="http://instagram.com/" target="_blank"
-        ><img src="./images/instagram.svg" alt="Instagram"
-      /></a>
-      <a href="http://twitter.com" target="_blank"
-        ><img src="./images/twitter.svg" alt="Twitter"
-      /></a>
+      </div>
     </header>
-
-    <!-- main -->
     <main>
       <!-- hero -->
       <section class="hero">
-        <h1>
-          Treat yourself or a loved one to our finest ingredients for a moment
-          of pure delight!
-        </h1>
-        <button type="button">Buy now</button>
-        <a href="#">How it’s made</a>
-        <p>scroll down</p>
-        <img src="./images/arrow.png" alt="arrow down" />
+        <div class="hero-container container">
+          <h1 class="hero-title">
+            Treat yourself or a loved one to our finest ingredients for a moment
+            of pure delight!
+          </h1>
+          <div class="buttons-container">
+            <button type="button" class="hero-btn">Buy now</button>
+            <a href="" class="hero-link">How it’s made</a>
+            <a href="" class="hero-scroll"
+              >scroll down<svg class="hero-scroll-icon" width="22" height="22">
+                <use href="./images/icons.svg#icon-arrow"></use>
+              </svg>
+            </a>
+          </div>
+        </div>
       </section>
-      <!-- Our advantages -->
-      <section>
-        <h2 hidden>Our advantages</h2>
-        <ul>
-          <li>
-            <h3>Unsurpassed taste</h3>
-            <p>
-              Crafted with the finest quality cocoa beans and a dedication to
-              perfection, each bite is a decadent experience that simply cannot
-              be matched. Savor the richness and complexity of our Unsurpassed
-              Taste and discover a new level of chocolate bliss.
-            </p>
-          </li>
-          <li>
-            <h3>Affordable price</h3>
-            <p>
-              Indulge in high-quality chocolate without breaking the bank with
-              Simply Chocolate's selection of affordable treats. Enjoy
-              mouth-watering truffles and velvety chocolate bars without
-              sacrificing taste or quality. Browse our selection and indulge in
-              affordable luxury today.
-            </p>
-          </li>
-          <li>
-            <h3>Own production</h3>
-            <p>
-              We take pride in our own production process, ensuring that every
-              step is carefully crafted to perfection. From selecting the finest
-              ingredients to handcrafting each piece, our attention to detail is
-              evident in every bite.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <!-- indridients -->
-      <section>
-        <h2>IT ALL ADDS UP TO ONE EXCEPTIONAL TASTE SENSATION</h2>
-        <p>
-          At Simply Chocolate, we believe that the secret to exceptional
-          chocolate is in the details. From the sourcing of the finest
-          ingredients to the careful crafting of each individual piece, every
-          step of our process adds up to one exceptional taste sensation.
-        </p>
-        <ul>
-          <li>
-            <img
-              src="./images/chocolate.png"
-              alt="piece of chocolate"
-              width="206"
-              height="160"
-            />
-            <p>MILK CHOCOLATE</p>
-          </li>
-          <li>
-            <img
-              src="./images/milk.png"
-              alt="bottle of milk"
-              width="206"
-              height="160"
-            />
-            <p>MILK</p>
-          </li>
-          <li>
-            <img
-              src="./images/nuts.png"
-              alt="some nuts"
-              width="206"
-              height="160"
-            />
-            <p>NUTS</p>
-          </li>
-          <li>
-            <img
-              src="./images/semi-sweet-choco.png"
-              alt="semi sweet chocolate"
-              width="206"
-              height="160"
-            />
-            <p>SEMI - SWEET CHOCOLATE</p>
-          </li>
-        </ul>
-      </section>
-      <!-- how its made -->
-      <section>
-        <h2>hOW IT’S made?</h2>
-        <img
-          src="./images/how-it-made.jpg"
-          alt="made chocolate"
-          width="600"
-          height="400"
-        />
-        <p>
-          Try our chocolates today and discover the perfect balance of flavor
-        </p>
-        <ul>
-          <li>
-            <p>
-              Heat the milk in a saucepan without bringing it to a boil. Add
-              sugar and cocoa powder.
-            </p>
-          </li>
-          <li>
-            <p>
-              At the same time, prepare a water bath. Melt the butter on it.
-            </p>
-          </li>
-          <li>
-            <p>
-              "Mix" the milk mixture and already liquid butter. Mix thoroughly
-              with a silicone spatula so that the mass becomes uniform and
-              silky.
-            </p>
-          </li>
-          <li>
-            <p>Heat the mixture over low heat, letting it barely boil.</p>
-          </li>
-          <li>
-            <p>
-              Pour the chocolate into special containers (can be replaced with
-              ice molds). Allow to cool and harden.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <!-- reviews -->
-      <section>
-        <h2>Chocolate is loved</h2>
-        <ul>
-            <li>
-                <img src="" alt="">
-                    <h3>
-                        <p></p>
-                    </h3>
-                </img>
+
+      <!-- benefits -->
+      <section class="benefits">
+        <div class="container">
+          <h2 class="title visually-hidden">Benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <h3 class="benefits-title">Unsurpassed taste</h3>
+              <p class="benefits-text">
+                Crafted with the finest quality cocoa beans and a dedication to
+                perfection, each bite is a decadent experience that simply
+                cannot be matched. Savor the richness and complexity of our
+                Unsurpassed Taste and discover a new level of chocolate bliss.
+              </p>
             </li>
-            <li>
-                <img src="" alt="">
-                    <h3>
-                        <p></p>
-                    </h3>
-                </img>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Affordable price</h3>
+              <p class="benefits-text">
+                Indulge in high-quality chocolate without breaking the bank with
+                Simply Chocolate's selection of affordable treats. Enjoy
+                mouth-watering truffles and velvety chocolate bars without
+                sacrificing taste or quality. Browse our selection and indulge
+                in affordable luxury today.
+              </p>
             </li>
-            <li>
-                <img src="" alt="">
-                    <h3>
-                        <p></p>
-                    </h3>
-                </img>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Own production</h3>
+              <p class="benefits-text">
+                We take pride in our own production process, ensuring that every
+                step is carefully crafted to perfection. From selecting the
+                finest ingredients to handcrafting each piece, our attention to
+                detail is evident in every bite.
+              </p>
             </li>
-        </ul>
+          </ul>
+        </div>
+      </section>
+
+      <!-- ingridients -->
+      <section class="ingridients">
+        <div class="container">
+          <h2 class="title ingridients-title">
+            IT ALL ADDS UP TO ONE EXCEPTIONAL
+            <span class="title-part">TASTE</span> SENSATION
+          </h2>
+          <p class="ingridients-text">
+            At Simply Chocolate, we believe that the secret to exceptional
+            chocolate is in the details. From the sourcing of the finest
+            ingredients to the careful crafting of each individual piece, every
+            step of our process adds up to one exceptional taste sensation.
+          </p>
+          <ul class="ingridients-list">
+            <li class="ingridients-item">
+              <img
+                src="./images/chocolate.png"
+                alt=""
+                class="ingridients-image"
+                width="206"
+                height="160"
+              />
+              <p class="ingridients-desc">MILK CHOCOLATE</p>
+              <div class="cover">
+                <p class="cover-title">Milk chocolate</p>
+                <ul class="cover-list">
+                  <li class="cover-item">
+                    <a href="" class="cover-link">chocolate</a>
+                  </li>
+                  <li class="cover-item">
+                    <a href="" class="cover-link">the benefits</a>
+                  </li>
+                </ul>
+                <p class="cover-text">
+                  Milk chocolate is a solid chocolate confectionery containing
+                  cocoa, sugar and milk. It is the most consumed type of
+                  chocolate. Chocolate was originally sold and consumed as a
+                  beverage in pre-Columbian times. Although four-fifths of all
+                  milk chocolate is sold in the United States and Europe.
+                </p>
+              </div>
+            </li>
+            <li class="ingridients-item">
+              <img
+                src="./images/milk.png"
+                alt=""
+                class="ingridients-image"
+                width="206"
+                height="160"
+              />
+              <p class="ingridients-desc">MILK</p>
+              <div class="cover">
+                <p class="cover-title">Milk</p>
+                <ul class="cover-list">
+                  <li class="cover-item">
+                    <a href="" class="cover-link">milk</a>
+                  </li>
+                  <li class="cover-item">
+                    <a href="" class="cover-link">the benefits</a>
+                  </li>
+                </ul>
+                <p class="cover-text">
+                  Milk is a white liquid food produced by the mammary glands of
+                  mammals. It is the primary source of nutrition for young
+                  mammals (including breastfed human infants) before they are
+                  able to digest solid food.Early-lactation milk, which is
+                  called colostrum, contains antibodies that strengthen the
+                  immune system.
+                </p>
+              </div>
+            </li>
+            <li class="ingridients-item">
+              <img
+                src="./images/nuts.png"
+                alt=""
+                class="ingridients-image"
+                width="206"
+                height="160"
+              />
+              <p class="ingridients-desc">NUTS</p>
+              <div class="cover">
+                <p class="cover-title">Nuts</p>
+                <ul class="cover-list">
+                  <li class="cover-item">
+                    <a href="" class="cover-link">nuts</a>
+                  </li>
+                  <li class="cover-item">
+                    <a href="" class="cover-link">the benefits</a>
+                  </li>
+                </ul>
+                <p class="cover-text">
+                  Almonds, pistachios, and walnuts are some types of nuts that
+                  contain healthy nutrients. When eaten as part of a
+                  nutrient-dense diet, these 9 nuts may offer benefits such as
+                  reducing your risk of heart disease. They’re a good source of
+                  fiber, healthy fats, and plant protein. Plus, they’re great on
+                  their own.
+                </p>
+              </div>
+            </li>
+            <li class="ingridients-item">
+              <img
+                src="./images/semi-sweet-choco.png"
+                alt=""
+                class="ingridients-image"
+                width="206"
+                height="160"
+              />
+              <p class="ingridients-desc">SEMI - SWEET CHOCOLATE</p>
+              <div class="cover">
+                <p class="cover-title">semi - sweet chocolate</p>
+                <ul class="cover-list">
+                  <li class="cover-item">
+                    <a href="" class="cover-link">sweet chocolate</a>
+                  </li>
+                  <li class="cover-item">
+                    <a href="" class="cover-link">the benefits</a>
+                  </li>
+                </ul>
+                <p class="cover-text">
+                  Semi-sweet chocolate has a cocoa solid content of 35 to 65%.
+                  One of the best ways to gain an understanding of this type of
+                  chocolate is to compare it to a different type of chocolate.
+                  Semisweet is darker than milk chocolate. In a taste
+                  comparison, it has a slightly bitter taste whereas milk
+                  chocolate is sweeter and more mellow.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
-
-    <footer></footer>
   </body>
 </html>
